<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/conta" android:icon="@drawable/ic_baseline_key_24">

        <EditTextPreference
            app:key="username"
            app:title="@string/seunome"
            app:summary="Este nome ficara visivél as outras pessoas"
            app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_baseline_security_24"
        app:title="@string/privacidade">

        <SwitchPreferenceCompat
            app:key="block"
            app:title="Foto de perfil"
            app:summary="@string/block"
            />


    </PreferenceCategory>

    <PreferenceCategory app:title="Notificação" android:icon="@drawable/ic_baseline_notifications_24">
        <SwitchPreferenceCompat
            app:key="notify"
            app:title="@string/notifymsg"
            app:summary="Clique para sim ou não"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/tema" android:icon="@drawable/ic_baseline_dark_mode_24">

        <SwitchPreferenceCompat
            android:title="@string/escuro"
            app:defaultValue="false"
            app:key="dark_mode"
            app:summary="Clique para ligar ou desligar o tema escuro" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/outros">
        <Preference
            android:title="Web/Rede Social"
            app:summary="Abrir site/rede social na web">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https:/google.com" />
        </Preference>

        <Preference android:title="@string/convidarAmigo" app:key="share">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https:/google.com" />
        </Preference>


    </PreferenceCategory>


</PreferenceScreen>